--- a/Operina Romano/stylesheet.css
+++ b/Operina Romano/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'p22_operina_proregular';
+    font-family: 'operina';
     src: url('p22-operina-pro-regular-webfont.woff2') format('woff2'),
          url('p22-operina-pro-regular-webfont.woff') format('woff');
     font-weight: normal;
