--- a/webfontkit-20250114-230749/Ornaments.css
+++ b/webfontkit-20250114-230749/Ornaments.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: 'cornpop2';
-    src: url('cornpop-webfont.woff2') format('woff2');
+    src: url('cornpop2-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 
