--- a/Ornamental/Ornamental.css
+++ b/Ornamental/Ornamental.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'vintage_panels_010regular';
+    font-family: 'vintagepanels10';
     src: url('vintage_panels_ten-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -14,7 +14,7 @@
 
 
 @font-face {
-    font-family: 'astrology_tfbregular';
+    font-family: 'astrology';
     src: url('astrology-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -25,7 +25,7 @@
 
 
 @font-face {
-    font-family: 'circlesregular';
+    font-family: 'circles';
     src: url('circles-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -36,7 +36,7 @@
 
 
 @font-face {
-    font-family: 'deborah_extrasornamentsRg';
+    font-family: 'deborahornaments';
     src: url('deborah_ornaments-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -47,7 +47,7 @@
 
 
 @font-face {
-    font-family: 'esotericaregular';
+    font-family: 'esoterica';
     src: url('esoterica-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -58,7 +58,7 @@
 
 
 @font-face {
-    font-family: 'freeribbonsregular';
+    font-family: 'ribbons';
     src: url('ribbons-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -69,7 +69,7 @@
 
 
 @font-face {
-    font-family: 'tegelregular';
+    font-family: 'tegel';
     src: url('tegel-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -80,7 +80,7 @@
 
 
 @font-face {
-    font-family: 'torajamatraregular';
+    font-family: 'torajamatra';
     src: url('torajamatra-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -91,7 +91,7 @@
 
 
 @font-face {
-    font-family: 'vintage_framesregular';
+    font-family: 'vintageframes';
     src: url('vintage_frames-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -102,7 +102,7 @@
 
 
 @font-face {
-    font-family: 'vintage_panels_018regular';
+    font-family: 'vintagepanels18';
     src: url('vintage_panels_eighteen-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -113,7 +113,7 @@
 
 
 @font-face {
-    font-family: 'vintage_panels_01regular';
+    font-family: 'vintagepanels1';
     src: url('vintage_panels_one-WOFF.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
